tests/baselines/reference/classStaticBlock19.errors.txt
tests/cases/conformance/classes/classStaticBlock/classStaticBlock19.ts(2,5): error TS1206: Decorators are not valid here.


==== tests/cases/conformance/classes/classStaticBlock/classStaticBlock19.ts (1 errors) ====
    class C {
        @decorator
        ~
!!! error TS1206: Decorators are not valid here.
        static {
            // something
        }
    }
    